--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "npx nodemon ./src/app.js"
@@ -14,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status": "^1.7.0",
     "joi": "^17.10.1",
     "pg": "^8.11.3"
   },
